--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Html app</title>
     <link rel="stylesheet" href= "styles.css">
     <script src="script.js"></script> 
+    <style>
+        p {
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <h1>this is h1</h1>
@@ -24,6 +29,14 @@
     <p>
         t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.<br> 
         The point of using Lorem Ipsum is that it has a more-or
+    </p>
+    <hr>
+    <a href="google.com" target="_blank"></a>
+    <p>
+        <b>hey its ashar</b><br>
+        <i>i am fine</i><br>
+        <u>hey</u>
+        <u><i><b>good morning</b></i></u>
     </p>
     
 </body>
