--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         p {
             color: blue;
             text-align: center; <!-- align the paragraph in center-->
-            
-
+        }
+        h1{
+            color:green;
+        }
+        link {
+            color: grey; <!--doesnt change the color of link-->
         }
     </style>
 </head>
@@ -35,7 +39,7 @@
     </p>
     <hr>
     <a href="google.com" target="_blank">Google</a> <!--target= blank means open in diff tab--> <!--not working-->
-    <a href="google.com">Google</a> <!--open in the same tab-->
+    <a href="https://www.google.com/" style="color:brown;">Google</a> <!--open in the same tab-->
     <p>
         <b>hey its ashar</b><br>
         <i>i am fine</i><br>
