--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         }
         h1{
             color:green;
+            text-align: center;
         }
         link {
             color: grey; <!--doesnt change the color of link-->
